tests/ui/const-generics/issues/issue-61336-2.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/issue-61336-2.rs:6:6
   |
LL |     [x; { N }]
   |      ^ the trait `Copy` is not implemented for `T`
   |
   = note: the `Copy` trait is required because this value will be copied for each element of the array
   = help: consider using `core::array::from_fn` to initialize the array
   = help: see https://doc.rust-lang.org/stable/std/array/fn.from_fn.html for more information
help: consider restricting type parameter `T` with trait `Copy`
   |
LL | fn g<T: std::marker::Copy, const N: usize>(x: T) -> [T; N] {
   |       +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
